<resources>
    <string name="app_name">Mula-starter</string>

    <!-- initial_input -->
    <string name="allocation">Allocation</string>
    <string name="enter_balance">ENTER BALANCE</string>
    <string name="dollar_sign">$</string>
    <string name="hint_input_balance">Enter Amount</string>
    <string name="submit_button">Submit</string>
    <string name="balance_submitted_toast">Balance Submitted</string>
    <string name="header_balance">BALANCE</string>
    <string name="add_expense">Add Expense</string>

    <!-- list_row_content -->
    <string name="expense_title">Expense</string>
    <string name="expense_amount">Amount</string>
    <string name="remaining_balance">$0.00</string>


    <!-- EXPERIMENTAL BELOW -->
    <string name="action_settings">Settings</string>
    <string name="action_add">add</string>
    <string name="expense_hint">$0.00</string>
    <string name="idea_text">Idea</string>
    <string name="important_text">Important</string>
    <string name="todo_text">To do</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>

    <string name="settings_title">Settings</string>
    <string name="theme_title">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="list_display_activity">ListDisplay</string>
    <string name="title_activity_list_display">ListDisplayActivity</string>

    <!-- new_allocation_dialog -->
    <string name="expense_description_hint">Enter Description </string>
    <string name="expense_amount_hint"> Enter Amount</string>
</resources>